remove zlll unused val

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
 
 
 body {
-    font-family: "Nunito Sans", "Poppins", "Outfit", sans-serif;
+    font-family: "Nunito Sans" "Poppins" "Outfit" sans-serif;
     scroll-behavior: smooth;
 }
