--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@ body {
     font-family: "Nunito Sans" "Poppins" "Outfit" sans-serif;
     scroll-behavior: smooth;
 }
+
+::-webkit-scrollbar {
+    @apply hidden
+}
